--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 </button>
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://app.powerbi.com/groups/me/reports/7a74c24a-e1d9-4370-a4c6-d67a9097e568/ReportSection?experience=power-bi'"
                 >
                   Live Demo
                 </button>
