--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>Bachelors Of Science Degree<br />PGcert Health Informatics (in view)</p>
+              <p>Bsc<br />PG Health Informatics</p>
             </div>
           </div>
           <div class="text-container">
@@ -290,7 +290,7 @@
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Dynamic Hospital Emergency Room Report Using Power Bi</h2>
+              <h2 class="experience-sub-title project-title">Hospital ER Report</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
@@ -309,22 +309,23 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-2.png"
+                  src="./assets/etl_weather_map.png"
                   alt="Project 2"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project Two</h2>
+              <h2 class="experience-sub-title project-title">CloudETL-Python-Airflow
+              </h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://github.com/alexazuog/CloudETL-Python-Airflow'"
                 >
                   Github
                 </button>
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://github.com/alexazuog/CloudETL-Python-Airflow'"
                 >
                   Live Demo
                 </button>
@@ -333,22 +334,22 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/project-3.png"
+                  src="./assets/health_care.png"
                   alt="Project 3"
                   class="project-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">Project Three</h2>
+              <h2 class="experience-sub-title project-title">Improving Patients Care </h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://mavenanalytics.io/project/8251'"
                 >
                   Github
                 </button>
                 <button
                   class="btn btn-color-2 project-btn"
-                  onclick="location.href='https://github.com/'"
+                  onclick="location.href='https://mavenanalytics.io/project/8251'"
                 >
                   Live Demo
                 </button>
