--- a/index.html
+++ b/index.html
@@ -401,27 +401,27 @@
 
           <div class="details-container color-container">
             <div class="article-container">
-              <!-- <img
-                src="./assets/etl_weather_map.png"
+              <img
+                src="./assets/project_5.png"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">CloudETL-Python-Airflow -->
+            <h2 class="experience-sub-title project-title"> Covid Cases Analysis
             </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/alexazuog/CloudETL-Python-Airflow'"
+                onclick="location.href='https://mavenanalytics.io/project/8099'"
               >
-                <!-- Github
+                Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/alexazuog/CloudETL-Python-Airflow'"
+                onclick="location.href='https://mavenanalytics.io/project/8099'"
               >
                 Live Demo
-              </button> -->
+              </button>
             </div>
           </div>
           <div class="details-container color-container">
